Bonjour ceci est un commit

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
 #navbarModalBtn:hover{background-color: #FFF;}
 #navbarModal{}
 footer{background-color: #808f85;}
-footer h3{color: #cfd11a; padding-left: 9%}
+footer h3{color: #cfd11a; padding-left: 6% ;margin-top: 10px;}
 footer li, a{list-style: none; font-size: 20px; color: #f2e9dc;}
-i{align-items: center; font-size: 40px; margin-left: auto;}
+i{align-items: center; font-size: 40px; margin-left: auto;margin-top: 10px}
 .footer-copyright{background-color: #5e6961;}
